@@ -2436,6 +2436,9 @@ sort_2(const void *ap, const void *bp, void *dummy)
  *  an integer less than 0 when +b+ follows +a+, +0+ when +a+ and +b+
  *  are equivalent, or an integer greater than 0 when +a+ follows +b+.
  *
+ *  The result is not guaranteed as stable.  When comparison of two
+ *  elements returns +0+, the order of the elements is unpredictable.
+ *
  *  See also Enumerable#sort_by.
  *
  *     a = [ "d", "a", "e", "c", "b" ]
@@ -2517,6 +2520,8 @@ rb_ary_sort_bang(VALUE ary)
  *  an integer less than 0 when +b+ follows +a+, +0+ when +a+ and +b+
  *  are equivalent, or an integer greater than 0 when +a+ follows +b+.
  *
+ *  The result is not guaranteed as stable.  When comparison of two
+ *  elements returns +0+, the order of the elements is unpredictable.
  *
  *  See also Enumerable#sort_by.
  *
@@ -2673,6 +2678,9 @@ sort_by_i(RB_BLOCK_CALL_FUNC_ARGLIST(i, dummy))
  *
  *  Sorts +self+ in place using a set of keys generated by mapping the
  *  values in +self+ through the given block.
+ *
+ *  The result is not guaranteed as stable.  When two keys are equal,
+ *  the order of the corresponding elements is unpredictable.
  *
  *  If no block is given, an Enumerator is returned instead.
  *
